--- a/index.html
+++ b/index.html
@@ -1,1 +1,89 @@
-Under Constructions
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta charset="utf-8">
+    <title>CodePro Technologies</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+
+    <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
+        integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ=="
+        crossorigin="anonymous" />
+    <link rel="stylesheet" href="./custom.css">
+
+    <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="icon" type="image/png" href="./favicon.png">
+
+</head>
+
+<body class="code-snippets-visible">
+
+    <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <div class="container">
+        <section class="header">
+            <img class="value-img" src="./logocp.png" alt="">
+            <img class="value-img" src="motto.png">
+        </section>
+
+        <!-- What we do -->
+        <div class="docs-section examples">
+            <div class="row example">
+
+                <div class="six columns">
+                    <h6 class="example-header">Software/Application Development</h6>
+                    <p class="example-description">Our process is simple. Tell us about your need. We design, code, and
+                        deliver. No bullshit. We are a small team. Being small makes us fast and very efficient, and NO,
+                        we don't outsource to some other country.
+                        Let's sign the NDA. </p>
+                    <img class="value-img" src="development.png">
+                </div>
+                <div class="six columns">
+                    <h6 class="example-header">IT Consultation</h6>
+                    <p class="example-description">Perhaps you want to digitalize your business but not sure how to do
+                        it? Or are you worried about the security or the stability of your application? Talk to us. We
+                        have been in the IT business for more than a decade. We can help you get on the right track.
+                    </p>
+                    <img class="value-img" src="consult.png">
+                </div>
+            </div>
+        </div>
+        <div class="row example">
+
+            <div class="six columns">
+                <h6 class="example-header">Training/Coaching</h6>
+                <p class="example-description">We firmly believe to teach is to learn twice. Our trainers are ready to
+                    transform you or your staff into well-rounded professionals. Software Development, Systems
+                    Administration, Cybersecurity, Software Management, we bring you top-notch training modules.
+                </p>
+                <img class="value-img" src="coach.png">
+            </div>
+            <div class="six columns" style="padding-top: 15px;">
+                <h4 class="example-header">Contact Us</h6>
+                <a style="font-size: x-large;" class="button" href="https://wa.link/3iz9vv">Whatsapp</a>
+                <a style="font-size: x-large;" class="button" href="tel:5554280940">Call</a>
+                <a style="font-size: x-large;" class="button" href="mailto:codeprobiz@gmail.com">Email</a>
+            </div>
+        </div>
+
+    </div>
+    <!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
+
+</html>
