--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                     <h6 class="example-header">Software/Application Development</h6>
                     <p class="example-description">Our process is simple. Tell us about your need. We design, code, and
                         deliver. No bullshit. We are a small team. Being small makes us fast and very efficient, and NO,
-                        we don't outsource to some other country.
-                        Let's sign the NDA. </p>
+                        we don't outsource to some other foreign country. </p>
                     <img class="value-img" src="development.png">
                 </div>
                 <div class="six columns">
@@ -69,7 +68,7 @@
                 <h6 class="example-header">Training/Coaching</h6>
                 <p class="example-description">We firmly believe to teach is to learn twice. Our trainers are ready to
                     transform you or your staff into well-rounded professionals. Software Development, Systems
-                    Administration, Cybersecurity, Software Management, we bring you top-notch training modules.
+                    Administration, Cybersecurity, Software Management, we bring you top-notch high-quality training modules.
                 </p>
                 <img class="value-img" src="coach.png">
             </div>
